--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack -p",
-    "dev": "webpack-dev-server"
+    "testrpc:docker:build": "docker build -t decent/testrpc docker/testrpc",
+    "testrpc:start": "docker run -t decent/testrpc testrpc -m \"hello build tongue rack parade express shine salute glare rate spice stock\" -a 10",
+    "dev": "NODE_ENV=development webpack-dev-server --progress --colors --content-base build/  --watch --hot --inline --config  webpack.config.js",
+    "truffle:migrate": "truffle migrate",
+    "truffle:start": "node truffle",
+    "bridge:start": "node ./node_modules/ethereum-bridge/bridge.js -H localhost:8545 -a 9 --dev"
+  },
+  "engines": {
+    "node": ">=6.9.1 <6.9.1"
   },
   "author": "Douglas von Kohorn",
   "license": "MIT",
@@ -26,10 +34,12 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "ethereum-bridge": "github:oraclize/ethereum-bridge",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.2",
+    "truffle": "^3.2.5",
     "truffle-contract": "^1.1.6",
     "url-loader": "^0.5.8",
     "web3": "^0.18.2",
