--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors --content-base build/  --watch --hot --inline --config  webpack.config.js",
     "truffle:migrate": "truffle migrate",
     "truffle:start": "node truffle",
-    "bridge:start": "cd ethereum-bridge && node bridge.js -H localhost:8545 -a 9 --dev"
+    "bridge:start": "cd ethereum-bridge && node bridge.js -H localhost:8545 -a 9 --dev",
+    "explorer:start": "cd explorer && npm start"
   },
   "engines": {
     "node": ">=6.9.1 <6.9.1"
