--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "lint": "eslint ./",
     "build": "webpack -p",
     "testrpc:docker:build": "docker build -t decent/testrpc docker/testrpc",
-    "testrpc:start": "docker run -p 8545:8545 -t decent/testrpc testrpc -m \"hello build tongue rack parade express shine salute glare rate spice stock\" -a 10",
+    "testrpc:docker:start": "docker run -p 8545:8545 -t decent/testrpc testrpc -m \"hello build tongue rack parade express shine salute glare rate spice stock\" -a 10",
+    "testrpc:start": "n use latest $(npm config get prefix)/bin/testrpc -m \"hello build tongue rack parade express shine salute glare rate spice stock\" -a 10",
+    "testrpc:install": "npm install -g ethereumjs-testrpc",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors --content-base build/  --watch --hot --inline --config  webpack.config.js",
     "truffle:migrate": "truffle migrate",
-    "truffle:start": "node truffle",
-    "bridge:start": "cd ethereum-bridge && node bridge.js -H localhost:8545 -a 9 --dev",
+    "truffle:install": "npm install -g truffle",
+    "bridge:start": "cd ethereum-bridge && n use 6.9.1 bridge -H localhost:8545 -a 9 --dev",
+    "bridge:install": "cd ethereum-bridge && npm install",
     "explorer:start": "cd explorer && npm start"
   },
   "engines": {
     "node": ">=6.9.1 <6.9.1"
   },
-  "author": "Douglas von Kohorn",
-  "license": "MIT",
+  "author": "https://github.com/szerintedmi/numbergame",
+  "license": "GPL-3",
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-core": "^6.24.1",
@@ -38,6 +41,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "n": "^2.1.7",
     "style-loader": "^0.13.2",
     "truffle": "^3.2.5",
     "truffle-contract": "^1.1.6",
