changes to prepare for testing: fixing babel dependencies for truffle test, amending testrpc run to have accounts with balances etc.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "lint": "eslint ./",
     "build": "webpack -p",
     "testrpc:docker:build": "docker build -t decent/testrpc docker/testrpc",
-    "testrpc:docker:start": "docker run -p 8545:8545 -t decent/testrpc testrpc -m \"hello build tongue rack parade express shine salute glare rate spice stock\" -a 10",
-    "testrpc:start": "n use latest $(npm config get prefix)/bin/testrpc -m \"hello build tongue rack parade express shine salute glare rate spice stock\" -a 10",
+    "testrpc:docker:start": "docker run -p 8545:8545 -t decent/testrpc testrpc $(< testrpcargs.conf)",
+    "testrpc:start": "./runtestrpc.sh",
     "testrpc:install": "npm install -g ethereumjs-testrpc",
     "dev": "NODE_ENV=development webpack-dev-server --progress --colors --content-base build/  --watch --hot --inline --config  webpack.config.js",
     "truffle:migrate": "truffle migrate",
@@ -27,8 +27,9 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.1.8",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.4",
